--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .idea/
 .Rhistory
 .RData
-DataScienceFinalPaper.aux
-DataScienceFinalPaper.log
-DataScienceFinalPaper.synctex.gz
+FinalProject/DataScienceFinalPaper.aux
+FinalProject/DataScienceFinalPaper.log
+FinalProject/DataScienceFinalPaper.synctex.gz
